# RektoFun-Frontend

./: README.md  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.json
.claude/: settings.json
app/: globals.css  layout.tsx  manifest.ts  not-found.tsx  page.tsx  robots.ts  sitemap.ts
app/about/: page.tsx
app/activity/: layout.tsx  page.tsx
app/admin/: AdminAuthGate.tsx  layout.tsx  page.tsx
app/challenges/: layout.tsx  page.tsx
app/clans/: page.tsx
app/components/: DepositModal.tsx  Footer.tsx  Navbar.tsx  ReferralAttributionCapture.tsx  ReferralModal.tsx  SettingsModal.tsx  SiteMaintenanceGate.tsx  UserOnboarding.tsx  WithdrawModal.tsx  index.ts
app/hooks/: index.ts  useChallengeCard.ts  useChallengeDetail.ts  useNavbar.ts
app/leaderboard/: layout.tsx  page.tsx
app/lib/: admin-auth.ts  admin-service.ts  admin-signer.ts  admin.ts  challenge-action-errors.ts  (+17 more)
rektofun/: package.json
rektofun-program/: Anchor.toml  PROGRAM_DOCS.md  package.json
rektofun-program/programs/rektofun-program/: Cargo.toml
rektofun-program/programs/rektofun-program/src/: constants.rs  error.rs  lib.rs  state.rs
rektofun-program/programs/rektofun-program/src/instructions/: accept_challenge.rs  admin_cancel_challenge.rs  admin_withdraw.rs  cancel_challenge.rs  claim_refund.rs  claim_winnings.rs  create_challenge.rs  initialize_config.rs  initialize_withdraw_authority.rs  mod.rs  settle_challenge.rs  update_admin.rs  update_platform_params.rs  update_withdraw_authority.rs
rektofun-program/programs/rektofun-program/tests/: test_challenges.rs
(+86 files in other folders)
