[package]
name = "rektofun-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rektofun_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ip = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
anchor-spl = "1.0.0"

[dev-dependencies]
litesvm = "0.10.0"
solana-keypair = "3.1.2"
solana-message = "3.1.0"
solana-signer = "3.0.0"
solana-transaction = "3.1.0"
